--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries():\n",
+    "def capitalized_countries():\n",
     "    for destination in travel_destinations:\n",
     "        capitalize_countries.append(destination.title())\n",
     "    return capitalize_countries "
